fixed a minor bug with search input cursor hidden if search text too long

--- a/styles/header.scss
+++ b/styles/header.scss
@@ -168,6 +168,7 @@ header {
     
     input {
       padding-left: 47px;
+      padding-right: 70px;
       grid-column: 1 / -1;
       grid-row: 1 / -1;
       border-radius: 30px;
